--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ aiogram = "^3.11.0"
 pandas = "^2.2.2"
 openpyxl = "^3.1.5"
 plotly = "^5.23.0"
+gitpython = "^3.1.43"
 
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
