--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.32.3"
 sqlalchemy = "^2.0.32"
 asyncpg = "^0.29.0"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
+pandas = "^2.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
