Добавлен отлов исключений и проверка подключения к БД при старте бота

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
             "console": "integratedTerminal",
             "args": [
                 // "--nolog=console",
-                "--mode=cycle"
+                // "--mode=cycle"
             ]
         },
         {
