--- a/log.ini
+++ b/log.ini
@@ -5,7 +5,7 @@ keys=default,console,default_threading
 
 [formatter_default]
 class=core.log_cfg.ExtraFormatter
-format=%(asctime)s - [%(levelname)-8s] - (%(filename)s).%(funcName)s(%(lineno)d) %(message)s 
+format=%(asctime)s - [%(levelname)-8s] (%(name)s) - (%(filename)s).%(funcName)s(%(lineno)d) %(message)s 
 datefmt=%Y-%m-%d %H:%M:%S
 
 [formatter_default_threading]
@@ -47,12 +47,17 @@ args=('./logs/app.log','w',100000000, 9)
 ; LOGGER
 
 [loggers]
-keys=root
+keys=root, sqlalchemy
 
 [logger_root]
 level=DEBUG
 handlers=console,file
 ; handlers=null ; UNCOMMENT TO DISABLE LOGGING
 
+[logger_sqlalchemy]
+level=INFO
+handlers=console,file
+qualname=sqlalchemy.engine.Engine
+propagate=0
 
 
