--- a/log.ini
+++ b/log.ini
@@ -15,7 +15,7 @@ format=%(asctime)s - [%(levelname)-8s] - [%(threadName)s] - (%(filename)s).%(fun
 datefmt=%Y-%m-%d %H:%M:%S
 
 [formatter_console]
-format=[%(levelname)-8s] - (%(filename)s).%(funcName)s(%(lineno)d): %(message)s
+format=[%(levelname)-8s] |%(name)s|:(%(filename)s).%(funcName)s(%(lineno)d): %(message)s
 
 ;  HANDLER
 
@@ -59,5 +59,6 @@ level=INFO
 handlers=console,file
 qualname=sqlalchemy.engine.Engine
 propagate=0
+
 
 
