--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pyqrcode = "^1.2.1"
 pypng = "^0.20220715.0"
 openpyxl = "^3.1.5"
 redis = "^5.0.8"
+random-word = "^1.0.11"
 
 
 [tool.poetry.group.dev.dependencies]
