--- a/log.ini
+++ b/log.ini
@@ -20,7 +20,7 @@ format=[%(levelname)-8s] |%(name)s|:(%(filename)s).%(funcName)s(%(lineno)d): %(m
 ;  HANDLER
 
 [handlers]
-keys=null,console,file,filerotator
+keys=null,console,file,file_psql,file_redis,file_sched,filerotator
 
 [handler_null]
 class=logging.NullHandler
@@ -38,6 +38,24 @@ level=INFO
 formatter=default
 args=('./logs/app.log','w',"UTF-8")
 
+[handler_file_psql]
+class=logging.FileHandler
+level=INFO
+formatter=default
+args=('./logs/psql.log','w',"UTF-8")
+
+[handler_file_redis]
+class=logging.FileHandler
+level=INFO
+formatter=default
+args=('./logs/redis.log','w',"UTF-8")
+
+[handler_file_sched]
+class=logging.FileHandler
+level=INFO
+formatter=default
+args=('./logs/sub.log','w',"UTF-8")
+
 [handler_filerotator]
 class=logging.handlers.RotatingFileHandler
 level=INFO
@@ -47,7 +65,7 @@ args=('./logs/app.log','w',100000000, 9)
 ; LOGGER
 
 [loggers]
-keys=root, sqlalchemy
+keys=root, sqlalchemy, redis, scheduler, sentry
 
 [logger_root]
 level=DEBUG
@@ -55,9 +73,25 @@ handlers=console,file
 
 [logger_sqlalchemy]
 level=INFO
-handlers=console,file
+handlers=console,file_psql
 qualname=sqlalchemy.engine.Engine
 propagate=0
 
+[logger_redis]
+level=INFO
+handlers=console,file_redis
+qualname=redis
+propagate=0
 
+[logger_scheduler]
+level=INFO
+handlers=file_sched
+qualname=apscheduler
+propagate=0
+
+[logger_sentry]
+level=INFO
+handlers=console,file
+qualname=urllib3.connectionpool
+propagate=0
 
