--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pypng = "^0.20220715.0"
 openpyxl = "^3.1.5"
 random-word = "^1.0.11"
 apscheduler = "^3.10.4"
+sentry-sdk = "^2.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
