--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,11 @@ requests = "^2.32.3"
 fastapi = {extras = ["all"], version = "^0.112.2"}
 uvicorn = {extras = ["standard"], version = "^0.30.6"}
 requests = "^2.32.3"
+fastui = "^0.7.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+# [tool.poetry.scripts]
+# start = "_serv:start"
