--- a/log.ini
+++ b/log.ini
@@ -90,7 +90,7 @@ qualname=apscheduler
 propagate=0
 
 [logger_sentry]
-level=INFO
+level=WARNING
 handlers=console,file
 qualname=urllib3.connectionpool
 propagate=0
