--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ openpyxl = "^3.1.5"
 random-word = "^1.0.11"
 apscheduler = "^3.10.4"
 sentry-sdk = "^2.14.0"
+aiohttp = "^3.10.8"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -28,7 +29,7 @@ ipykernel = "^6.29.5"
 [tool.poetry.group.database.dependencies]
 asyncpg = "^0.29.0"
 sqlalchemy = "^2.0.34"
-redis = "^5.0.8"
+redis = "5.0.8"
 
 
 [tool.poetry.group.pay.dependencies]
