Исправление бага с тайм зоной

--- a/server/bot_subserver.conf
+++ b/server/bot_subserver.conf
@@ -1,6 +1,8 @@
 [program:bot_subserver]
 directory=/home/bot/code/vpn_dan_bot
-command=./_serv.py
+command=/home/bot/code/vpn_dan_bot/_serv.py
 user=bot
 autostart=true
 autorestart=true
+process_name=%(program_name)s_%(process_num)02d 
+numprocs=4
