--- a/server/bot_subserver.conf
+++ b/server/bot_subserver.conf
@@ -4,5 +4,5 @@ command=/home/bot/code/vpn_dan_bot/_serv.py
 user=bot
 autostart=true
 autorestart=true
-process_name=%(program_name)s_%(process_num)02d 
-numprocs=4
+; process_name=%(program_name)s_%(process_num)02d 
+; numprocs=4
