Версия 0.2.0 Исправления по результатами тестирования

--- a/log.ini
+++ b/log.ini
@@ -71,7 +71,7 @@ args=('./logs/app.log','w',100000000, 9)
 ; LOGGER
 
 [loggers]
-keys=root, sqlalchemy, redis, scheduler, wg, sentry
+keys=root, sqlalchemy, sqlalchemy_engine, redis, scheduler, wg, sentry
 
 [logger_root]
 level=DEBUG
@@ -79,6 +79,12 @@ handlers=console,file
 
 [logger_sqlalchemy]
 level=INFO
+handlers=console,file_psql
+qualname=sqlalchemy
+propagate=0
+
+[logger_sqlalchemy_engine]
+level=WARNING
 handlers=console,file_psql
 qualname=sqlalchemy.engine.Engine
 propagate=0
