--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,24 @@
 [tool.poetry]
-name = "vpn_dan_bot"
-version = "0.2.1"
-description = ""
-authors = ["zveropolis <zadira-era@yandex.ru>"]
+name = "vpn-dan-bot"
+version = "0.2.2"
+description = "test python 3.12"
+authors = ["daniil-mazurov"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-pydantic-settings = "^2.4.0"
-aiogram = "^3.12.0"
-pandas = "^2.2.2"
-asyncssh = "^2.16.0"
+python = "^3.12"
+pydantic-settings = "^2.6.0"
+aiogram = "^3.13.1"
+pandas = "^2.2.3"
+asyncssh = "^2.17.0"
 pytils = "^0.4.1"
 pyqrcode = "^1.2.1"
 pypng = "^0.20220715.0"
 openpyxl = "^3.1.5"
 random-word = "^1.0.11"
 apscheduler = "^3.10.4"
-sentry-sdk = "^2.14.0"
-aiohttp = "^3.10.8"
+sentry-sdk = "^2.17.0"
+aiohttp = "^3.10.10"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -27,9 +27,9 @@ ipykernel = "^6.29.5"
 
 
 [tool.poetry.group.database.dependencies]
-asyncpg = "^0.29.0"
-sqlalchemy = "^2.0.34"
-redis = "5.0.8"
+asyncpg = "^0.30.0"
+sqlalchemy = "^2.0.36"
+redis = "^5.1.1"
 
 
 [tool.poetry.group.pay.dependencies]
@@ -38,14 +38,12 @@ requests = "^2.32.3"
 
 
 [tool.poetry.group.server.dependencies]
-fastapi = {extras = ["all"], version = "^0.112.2"}
-uvicorn = {extras = ["standard"], version = "^0.30.6"}
+fastapi = {extras = ["all"], version = "^0.115.3"}
+uvicorn = {extras = ["standard"], version = "^0.32.0"}
 requests = "^2.32.3"
 fastui = "^0.7.0"
+jwt = "^1.3.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-# [tool.poetry.scripts]
-# start = "_serv:start"
