--- a/server/log.ini
+++ b/server/log.ini
@@ -57,7 +57,7 @@ args=('./logs/queue.log','a+',"UTF-8")
 ; LOGGER
 
 [loggers]
-keys=root, sqlalchemy, sentry, queue
+keys=root, sqlalchemy, sqlalchemy_engine, sentry, queue
 
 [logger_root]
 level=DEBUG
@@ -65,6 +65,12 @@ handlers=console,file
 
 [logger_sqlalchemy]
 level=INFO
+handlers=console,file_psql
+qualname=sqlalchemy
+propagate=0
+
+[logger_sqlalchemy_engine]
+level=WARNING
 handlers=console,file_psql
 qualname=sqlalchemy.engine.Engine
 propagate=0
