--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,10 @@ fastapi = {extras = ["all"], version = "^0.115.3"}
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 requests = "^2.32.3"
 fastui = "^0.7.0"
-jwt = "^1.3.1"
+pyjwt = "^2.9.0"
+passlib = "^1.7.4"
+bcrypt = "^4.2.0"
+wheel = "^0.44.0"
 
 [build-system]
 requires = ["poetry-core"]
