--- a/log.ini
+++ b/log.ini
@@ -20,7 +20,7 @@ format=[%(levelname)-8s] |%(name)s|:(%(filename)s).%(funcName)s(%(lineno)d): %(m
 ;  HANDLER
 
 [handlers]
-keys=null,console,file,file_psql,file_redis,file_sched,file_wg,filerotator
+keys=null,console,file,file_psql,file_redis,file_sched,file_wg
 
 [handler_null]
 class=logging.NullHandler
@@ -33,40 +33,38 @@ formatter=console
 args=(sys.stdout,)
 
 [handler_file]
-class=logging.FileHandler
-level=INFO
-formatter=default
-args=('./logs/app.log','w',"UTF-8")
-
-[handler_file_psql]
-class=logging.FileHandler
-level=INFO
-formatter=default
-args=('./logs/psql.log','w',"UTF-8")
-
-[handler_file_redis]
-class=logging.FileHandler
-level=INFO
-formatter=default
-args=('./logs/redis.log','w',"UTF-8")
-
-[handler_file_sched]
-class=logging.FileHandler
-level=INFO
-formatter=default
-args=('./logs/scheduler.log','w',"UTF-8")
-
-[handler_file_wg]
-class=logging.FileHandler
-level=INFO
-formatter=default
-args=('./logs/wg.log','w',"UTF-8")
-
-[handler_filerotator]
+; class=logging.FileHandler
+; level=INFO
+; formatter=default
+; args=('./logs/app.log','w',"UTF-8")
 class=logging.handlers.RotatingFileHandler
 level=INFO
 formatter=default
-args=('./logs/app.log','w',100000000, 9)
+args=('./logs/app.log','a+',100_000_000,3)
+
+[handler_file_psql]
+class=logging.handlers.RotatingFileHandler
+level=INFO
+formatter=default
+args=('./logs/psql.log','a+',100_000_000,3)
+
+[handler_file_redis]
+class=logging.handlers.RotatingFileHandler
+level=INFO
+formatter=default
+args=('./logs/redis.log','a+',100_000_000,3)
+
+[handler_file_sched]
+class=logging.handlers.RotatingFileHandler
+level=INFO
+formatter=default
+args=('./logs/scheduler.log','a+',100_000_000,3)
+
+[handler_file_wg]
+class=logging.handlers.RotatingFileHandler
+level=INFO
+formatter=default
+args=('./logs/wg.log','a+',100_000_000,3)
 
 ; LOGGER
 
