--- a/log.ini
+++ b/log.ini
@@ -40,31 +40,31 @@ args=(sys.stdout,)
 class=logging.handlers.RotatingFileHandler
 level=INFO
 formatter=default
-args=('./logs/app.log','a+',100_000_000,3)
+args=('./logs/app.log','a+',100_000_000,3,"UTF-8")
 
 [handler_file_psql]
 class=logging.handlers.RotatingFileHandler
 level=INFO
 formatter=default
-args=('./logs/psql.log','a+',100_000_000,3)
+args=('./logs/psql.log','a+',100_000_000,3,"UTF-8")
 
 [handler_file_redis]
 class=logging.handlers.RotatingFileHandler
 level=INFO
 formatter=default
-args=('./logs/redis.log','a+',100_000_000,3)
+args=('./logs/redis.log','a+',100_000_000,3,"UTF-8")
 
 [handler_file_sched]
 class=logging.handlers.RotatingFileHandler
 level=INFO
 formatter=default
-args=('./logs/scheduler.log','a+',100_000_000,3)
+args=('./logs/scheduler.log','a+',100_000_000,3,"UTF-8")
 
 [handler_file_wg]
 class=logging.handlers.RotatingFileHandler
 level=INFO
 formatter=default
-args=('./logs/wg.log','a+',100_000_000,3)
+args=('./logs/wg.log','a+',100_000_000,3,"UTF-8")
 
 ; LOGGER
 
