--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ pyjwt = "^2.9.0"
 passlib = "^1.7.4"
 bcrypt = "^4.2.0"
 wheel = "^0.44.0"
+jinja2 = "^3.1.4"
+spire-doc = "^12.7.1"
 
 [build-system]
 requires = ["poetry-core"]
