--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ passlib = "^1.7.4"
 bcrypt = "^4.2.0"
 wheel = "^0.44.0"
 jinja2 = "^3.1.4"
+mammoth = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core"]
