--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,17 @@
     "cSpell.enableFiletypes": [
         "ini",
         "kivy"
+    ],
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "danvpn-dev",
+            "database": "devbotbase",
+            "username": "bot",
+            "password": "OmegaUltraSTO500!"
+        }
     ]
 }
