--- a/server/log.ini
+++ b/server/log.ini
@@ -24,7 +24,7 @@ datefmt=%Y-%m-%d %H:%M:%S
 ;  HANDLER
 
 [handlers]
-keys=null,console,file,file_psql,queue
+keys=null,console,file,file_psql,queue,file_redis,file_sched,file_wg
 
 [handler_null]
 class=logging.NullHandler
@@ -54,10 +54,28 @@ level=INFO
 formatter=queue
 args=('./logs/queue.log','a+',10_000_000,10,"UTF-8")
 
+[handler_file_redis]
+class=logging.handlers.RotatingFileHandler
+level=INFO
+formatter=default
+args=('./logs/redis_serv.log','a+',10_000_000,10,"UTF-8")
+
+[handler_file_sched]
+class=logging.handlers.RotatingFileHandler
+level=INFO
+formatter=default
+args=('./logs/scheduler_serv.log','a+',10_000_000,10,"UTF-8")
+
+[handler_file_wg]
+class=logging.handlers.RotatingFileHandler
+level=INFO
+formatter=default
+args=('./logs/wg_serv.log','a+',10_000_000,10,"UTF-8")
+
 ; LOGGER
 
 [loggers]
-keys=root, sqlalchemy, sqlalchemy_engine, sentry, queue
+keys=root, sqlalchemy, sqlalchemy_engine, queue, redis, scheduler, wg, sentry
 
 [logger_root]
 level=DEBUG
@@ -75,14 +93,32 @@ handlers=console,file_psql
 qualname=sqlalchemy.engine.Engine
 propagate=0
 
-[logger_sentry]
-level=WARNING
-handlers=console,file
-qualname=urllib3.connectionpool
-propagate=0
-
 [logger_queue]
 level=INFO
 handlers=queue
 qualname=queue
+propagate=0
+
+[logger_redis]
+level=INFO
+handlers=console,file_redis
+qualname=redis
+propagate=0
+
+[logger_scheduler]
+level=INFO
+handlers=file_sched
+qualname=apscheduler
+propagate=0
+
+[logger_wg]
+level=INFO
+handlers=console, file_wg
+qualname=asyncssh
+propagate=0
+
+[logger_sentry]
+level=WARNING
+handlers=console,file
+qualname=urllib3.connectionpool
 propagate=0
